2005-03-13  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c15.

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c6.

	* skins/rtai: Use POSIXish priority range for tasks.

2005-03-11  Philippe Gerum  <rpm@xenomai.org>

	* fusion: Use module_param[_named]() everywhere instead of the
	deprecated MODULE_PARM() syntax so that we now have some
	visibility upon the module parameters through sysfs.

	* nucleus/shadow.c (xnshadow_renice): Fix call context.
	(set_linux_task_priority): Use latest Adeos extension to change a
	task priority instead of emulating an intra-kernel syscall to
	sys_setscheduler.
	(xnshadow_relax): Use the latest all-in-one Adeos extension to
	reenter the root domain while updating the current task priority
	if needed.

2005-03-09  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/switch/switch.c (main): Fix error cases: send output
	to stderr, return non-zero to the parent process.

2005-03-08  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/syscall.h (__xn_exec_current): Add mode bit to
	run syscall in the caller's domain.

2005-03-07  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in: Remove the CROSS_COMPILE hack.

	* makefile (config.status): Pass CROSS_COMPILE (and other
	variables) value using configure command line instead of its
	environment, so that config.status keeps this value.

2005-03-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/atomic.h (__builtin_expect): Provide
	placeholder for GCC < 2.96.

2005-03-07  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>

	* arch/i386/hal.c (rthal_release_irq): Handle the possible failure 
	of the adeos_virtualize_irq_from() call. 
	
	* arch/ppc/hal.c (rthal_release_irq): Handle the possible failure 
	of the adeos_virtualize_irq_from() call. 

	* arch/i386/hal.c (__rthal_init): Handle the possible failure of
	adeos_virtualize_irq() and adeos_register_domain(). Perform the 